[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/Parallax.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/boxs/nivels.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Kenney Mini.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/buttons/nivels/audiobasic.png" type="Texture" id=5]
[ext_resource path="res://assets/buttons/nivels/audiopress.png" type="Texture" id=6]
[ext_resource path="res://scenes/Transition.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/Nivel2.gd" type="Script" id=8]
[ext_resource path="res://scenes/ObjectDragDrop.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/Panel1.gd" type="Script" id=10]
[ext_resource path="res://scripts/Panel2.gd" type="Script" id=11]
[ext_resource path="res://scripts/Panel3.gd" type="Script" id=12]
[ext_resource path="res://scripts/Panel4.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
size = 30
extra_spacing_space = 5
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 4 )

[node name="Nivel2" type="Node2D"]
script = ExtResource( 8 )
Objeto = ExtResource( 9 )

[node name="Parallax" parent="." instance=ExtResource( 1 )]

[node name="Background" type="TextureRect" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 160.0
margin_bottom = 120.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Display" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 100.0
margin_right = 1160.0
margin_bottom = 140.0
rect_min_size = Vector2( 1040, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin1" type="MarginContainer" parent="Display"]
margin_right = 1040.0
margin_bottom = 130.0
rect_min_size = Vector2( 1040, 130 )

[node name="Indicaciones" type="RichTextLabel" parent="Display/Margin1"]
margin_right = 1040.0
margin_bottom = 130.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true

[node name="Panels" type="HBoxContainer" parent="."]
visible = false
margin_left = 120.0
margin_top = 230.0
margin_right = 160.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin1" type="MarginContainer" parent="Panels"]
visible = false
margin_right = 250.0
margin_bottom = 205.0
rect_min_size = Vector2( 250, 205 )

[node name="Panel1" type="Panel" parent="Panels/Margin1"]
margin_left = 30.0
margin_top = 7.0
margin_right = 220.0
margin_bottom = 197.0
rect_min_size = Vector2( 190, 190 )
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 10 )

[node name="Label" type="Label" parent="Panels/Margin1"]
margin_left = 106.0
margin_top = 40.0
margin_right = 144.0
margin_bottom = 165.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin2" type="MarginContainer" parent="Panels"]
visible = false
margin_right = 250.0
margin_bottom = 205.0
rect_min_size = Vector2( 250, 205 )

[node name="Panel2" type="Panel" parent="Panels/Margin2"]
margin_left = 30.0
margin_top = 7.0
margin_right = 220.0
margin_bottom = 197.0
rect_min_size = Vector2( 190, 190 )
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 11 )

[node name="Label" type="Label" parent="Panels/Margin2"]
margin_left = 93.0
margin_top = 40.0
margin_right = 156.0
margin_bottom = 165.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin3" type="MarginContainer" parent="Panels"]
visible = false
margin_right = 250.0
margin_bottom = 205.0
rect_min_size = Vector2( 250, 205 )

[node name="Panel3" type="Panel" parent="Panels/Margin3"]
margin_left = 30.0
margin_top = 7.0
margin_right = 220.0
margin_bottom = 197.0
rect_min_size = Vector2( 190, 190 )
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 12 )

[node name="Label" type="Label" parent="Panels/Margin3"]
margin_left = 93.0
margin_top = 40.0
margin_right = 156.0
margin_bottom = 165.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin4" type="MarginContainer" parent="Panels"]
visible = false
margin_right = 250.0
margin_bottom = 205.0
rect_min_size = Vector2( 250, 205 )

[node name="Panel4" type="Panel" parent="Panels/Margin4"]
margin_left = 30.0
margin_top = 7.0
margin_right = 220.0
margin_bottom = 197.0
rect_min_size = Vector2( 190, 190 )
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 13 )

[node name="Label" type="Label" parent="Panels/Margin4"]
margin_left = 93.0
margin_top = 40.0
margin_right = 156.0
margin_bottom = 165.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
margin_left = 974.0
margin_top = 465.0
margin_right = 1014.0
margin_bottom = 505.0
rect_min_size = Vector2( 190, 190 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Escuchar" type="TextureButton" parent="Margin"]
margin_left = 42.0
margin_top = 42.0
margin_right = 147.0
margin_bottom = 147.0
rect_min_size = Vector2( 105, 105 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="Objects" type="Node2D" parent="."]
visible = false

[node name="Sounds" type="Node2D" parent="."]
visible = false

[node name="Options" type="Node2D" parent="."]
visible = false

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="Transition" parent="." instance=ExtResource( 7 )]

[node name="Timer" type="Timer" parent="."]
[connection signal="pressed" from="Margin/Escuchar" to="." method="_on_Escuchar_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
